ajustes en reglas de ideas